# axel

./: .gitignore  CLIENT-SETUP.md  Cargo.toml  DATABASE-SETUP.md  DUMPING.md  LICENSE-MIT  README.md  SERVER-SETUP.md  build.rs  key.pem  pubkey.pem  rustfmt.toml
.github/: CONTRIBUTING.md
config/: default.toml
master/: ad_movie.json  ad_reward.json  animation_loginbonus_days.json  animation_loginbonus_navi_set.json  animation_loginbonus_result_pattern.json  assist.json  assist_details.json  assist_medal_rate.json  background.json  banner.json  battle_enemy.json  battle_enemy_ai.json  battle_enemy_condition.json  battle_enemy_voice.json  battle_position.json  battle_voice.json  battle_wave.json  bgm.json  bonus_character.json  campaign.json  campaign_box_gacha.json  campaign_box_gacha_infinity.json  campaign_box_gacha_limit.json  campaign_item_gacha.json  campaign_item_gacha_lot.json  character.json  character_enhance.json  character_enhance_change_display.json  character_enhance_stage_position.json  character_enhance_trial.json  character_intimacy_details.json  character_looks_replace.json  character_piece.json  character_piece_board.json  character_piece_board_reward.json  character_piece_board_stage.json  clienttext.json  comeback_present.json  comeback_present_item.json  content_release.json  (+218 more)
migrations/: 20250801000001_create_users_and_user_devices_tables.sql  20251206000001_add_user_favorite_member_and_honor.sql  20251209000001_add_characters_and_members_table.sql  20251211000001_add_parties_table.sql  20251225000001_add_user_device_info.sql  20251225000002_add_rls.sql  20251227000001_add_user_items.sql  20251229000001_add_user_members_reserve.sql  20260101000001_add_user_items_equipment.sql  20260106000001_add_gacha.sql  20260119000001_add_character_special_skills.sql  20260124000001_add_user_member_skills.sql  20260125000001_add_party_assist_and_trait.sql  20260201000001_add_home.sql  20260201000002_user_overrides.sql  20260206000001_fix_user_home_illustrations_unique.sql  import_gacha_rates.py  migrate.sh
rsa-patcher/: Cargo.toml
rsa-patcher/src/: main.rs
src/: api_server.rs  blob.rs  bool_as_int.rs  build_info.rs  call.rs  client_ip.rs  database.rs  extractor.rs  gacha-tutorial-reward.json  handler.rs  impl_handler.rs  intimacy_rank.rs  login-remotedata.json  login.json  main.rs  masterall.json  masterlist.json  member.rs  migrations.rs  normalize_path.rs  params_deserializer.rs  party-info.json  router.rs  (+6 more)
(+68 files in other folders)
