[package]
name = "axel"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.86"
axum = "0.7.5"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["std"] }
const-decoder = "0.3.0"
hex = "0.4.3"
md5 = "0.7.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_urlencoded = "0.7.1"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "io-util", "macros", "fs", "process"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
