[package]
name = "axel"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["std"] }
clap = { version = "4.5.42", features = ["derive"] }
const-decoder = "0.4.0"
jwt-simple = "0.12.13"
md5 = "0.8.0"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_urlencoded = "0.7.1"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "io-util", "macros", "fs", "process"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
rand = "0.9.2"
erased-serde = "0.4.6"
flate2 = "1.1.2"
url = { version = "2.5.4", features = ["serde"] }
tracing-appender = "0.2.3"
chrono = "0.4.41"
futures = "0.3.31"
serde_repr = "0.1.20"
config = "0.15.13"
const-hex = "1.14.1"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-serde_json-1"] }
rustls = { version = "0.23.31" }
tokio-postgres-rustls = "0.13.0"
postgres-types = { version = "0.2.9", features = ["derive"] }
indoc = "2.0.6"
uuid = { version = "1.18.0", features = ["v4"] }
serde-this-or-that = "0.5.0"
