[package]
name = "axel-rsa-patcher"
version = "0.1.0"
edition = "2021"

[dependencies]
bytesize = "2.0.1"
clap = { version = "4.5.41", features = ["derive"] }
memmem = "0.1.1"
openssl = "0.10.73"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
